[package]
name = "docuTron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
